CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.17

	- The RunAsUser option was incompatible with the new
	  daemon-mode code in 1.1.16.
	- Fixed a problem with the Set-Job-Attributes and
	  PostScript job ticket code in the scheduler - the
	  "last" attribute pointer was never updated, which
	  could cause the scheduler to crash when applying job
	  ticket data.
	- Fixed a problem in the scheduler that caused it to
	  continue processing HTTP requests on a connection
	  after it was shutdown.
	- The scheduler now allows accounts authenticated via
	  PAM to not have a corresponding UNIX account, but
	  group membership still requires the account name to be
	  listed in the UNIX group file(s)...
	- The scheduler used a fixed-size (16k) buffer for
	  encoding job options for filters; it now dynamically
	  allocates and expands the buffer as needed depending
	  on the options that are sent in a job.
	- The pdftops filter didn't support all of the MacOS
	  characters for MacRoman encoded fonts.
	- The cupsEncodeOptions() and cupsParseOptions()
	  functions now conform to the grammer defined by the
	  current draft of the PAPI specification.  The main
	  difference is that option=yes and option=no are no
	  longer treated as boolean options.
	- The IPP backend didn't honor the encryption settings
	  in /etc/cups/client.conf.
	- Fixed a potential bug in the HTTP code which was
	  caused by servers sending the status line and
	  newline(s) in separate packets.
	- User-defined classification strings are now printed
	  verbatim - previously the classification box would be
	  empty.
	- Re-added Spanish to the list of PPD languages that
	  CUPS supports.
	- CUPS API library user and temp file updates for
	  Windows.
	- The image filters did not properly handle grayscale
	  printing of Sun Raster images.
	- The scheduler never reset the NumJobs variable before
	  loading the job list (previously this only happened on
	  a full start, so the problem was never apparent...)